--- a/client.ranger/package.json
+++ b/client.ranger/package.json
@@ -13,8 +13,10 @@
     "@babel/cli": "^7.1.0",
     "@babel/core": "^7.1.0",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.8.4",
     "axios": "^0.19.2",
     "babel-loader": "^8.0.2",
     "css-loader": "^1.0.0",
