--- a/client.ranger/package.json
+++ b/client.ranger/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.19.2",
     "babel-loader": "^8.0.2",
     "css-loader": "^1.0.0",
+    "plotly": "^1.0.6",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "style-loader": "^0.23.0",
